--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "moment": "^2.29.1",
     "react": "^17.0.1",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "prop-types": "^15.7.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5"
